[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticket-router"
version = "0.1.0"
description = "TicketRouter — intelligent ticket routing to the right team, queue, or system"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Leonardo Santiago Benitez Pereira", email = "lsbenitezpereira@gmail.com" },
]
keywords = ["itsm", "tickets", "routing", "automation", "orchestration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/LeonardoSanBenitez/TicketRouter"
Repository = "https://github.com/LeonardoSanBenitez/TicketRouter"

[tool.hatch.build.targets.wheel]
packages = ["ticket_router"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true
